# minager_profile

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  alembic.ini  consumer.py  main.py  pyproject.toml
alembic/: env.py
profile/: app.py  logger.py  settings.py
profile/core/: dependencies.py  utils.py
profile/core/amqp/: tester.py
profile/user_profile/: api.py  models.py  schemas.py
profile/user_profile/migrations/: dc25efd5d867_add_user_profile_model.py
