[tool.poetry]
name = "profile"
version = "0.1.0"
description = ""
authors = ["Sultan Nasyrov <tightbtctrader@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
alembic = "^1.14.0"
sqlmodel = "^0.0.22"
pydantic-settings = "^2.7.0"
yarl = "^1.18.3"
aio-pika = "^9.5.4"
asyncpg = "^0.30.0"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
psycopg-binary = "^3.2.3"
psycopg2 = "^2.9.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
